--- a/styles.css
+++ b/styles.css
@@ -12,46 +12,63 @@ body {
 }
 .container {
     width: 100vw;
-    /* height: 100vh; */
     display: grid;
-    /* grid-template-rows: 200px 1fr; */
-    background-color: yellow;
 }
 .header-wrapper {
-    background-color: green;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 .header {
     width: var(--max-content-width);
     justify-self: center;
-    padding: var(--core-content-padding);
-    background-color: pink;
+    padding: 10px 80px;
     display: flex;
     justify-content: space-between;
 }
-.main-wrapper {
-    background-color: blue;
+.title-text {
+    font-size: 30px;
+}
+.add-book-btn {
+    background-color: rgb(35, 86, 116);
+    font-weight: bold;  
+    color: rgb(255, 255, 255);
+    width: 20%;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 2px 1px 3px rgba(0,0,0,.3);
 }
 .main {
     width: var(--max-content-width);
     padding: var(--core-content-padding);
-    background-color: orange;
     display: grid;
     justify-self: center;
-    /* justify-content: center; */
-    border: 2px solid purple;
 }
 .card-container {
-    /* width: 100%; */
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-template-rows: 150px;
+    grid-auto-rows: 150px;
     column-gap: 60px;
     row-gap: 20px;
-    border: 3px solid black;
 }
 .card {
     background-color: white;
-    box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
+    position: relative;
+    border-radius: 20px;
+}
+.delete-card-btn {
+    position: absolute;
+    top: 7px;
+    right: 10px;
+    font-size: 25px;
+    color: #b9b9b9;    
+}
+.delete-card-btn:hover,
+.delete-card-btn:focus {
+    color: #000000;
+    text-decoration: none;
+    cursor: pointer;
 }
 .card-inner {
     height: 100%;
@@ -62,10 +79,8 @@ body {
     justify-content: space-between;
 }
 .card-upper {
-    border: 3px solid red;
     display: flex;
     flex-direction: column;
-    /* gap: 10px; */
 }
 .card-book-title {
     font-size: 20px;
@@ -79,11 +94,93 @@ body {
     font-size: 12px;
 }
 .card-lower {
-    border: 3px solid green;
     display: flex;
     gap: 10px;
     justify-content: right;
 }
 .card-lower > p {
     font-size: 14px;
+}
+.modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+    padding: 10px;
+} 
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 35%;
+    max-width: 600px;
+    position: relative;
+    text-align: center;
+    border-radius: 10px;
+    display: grid;
+    justify-self: center;
+    margin-top: 20px;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #000;
+    cursor: pointer;
+}
+.close:hover,
+.close:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+}
+#form-add-book {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+}
+.form-item {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 2px;
+}
+input[type='text'] {
+    width: 60%;
+}
+input[type='number']{
+    width: 20%;
+}
+fieldset {
+    all: unset;
+    align-self: start;
+}
+.radio-wrapper {
+    margin-top: 3px;
+    display: flex; 
+    justify-content: center;
+    gap: 10px;
+}
+.radio-choice {
+    display: flex;
+    gap: 5px;
+}
+.submit-add-book-btn {
+    background-color: rgb(105, 245, 62);
+    color: white;
+    width: 40%;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0,.3);
+}
+.submit-add-book-btn:hover {
+    background-color: #3ad642;
 }
